# cesty

./: Cargo.toml  LICENSE  README.md  justfile  test_all.sh
cesty-build/: Cargo.toml
cesty-build/llvm-pass/: build.sh  cesty-llvm.cpp
cesty-build/src/: cc.rs  config_getters.rs  find_clang.rs  lib.rs  llvm_pass.rs
cesty-macro/: Cargo.toml
cesty-macro/src/: lib.rs
ci/: Dockerfile
examples/: README.md
examples/gpio/: Cargo.toml  build.rs
examples/gpio/c/: gpio_driver.c
examples/gpio/include/: gpio_driver.h
examples/gpio/include/arch/: types.h
examples/gpio/src/: lib.rs
examples/gpio/tests/: gpio.rs
examples/mem_mock/: Cargo.toml
examples/mem_mock/c/: example.c  example.ll
examples/mem_mock/src/: lib.rs
examples/mem_mock/tests/: example.rs
examples/mock_basics/: Cargo.toml
examples/mock_basics/tests/: mock_basics.rs
examples/uart/: Cargo.toml
examples/uart/c/: uart_buffer.c
examples/uart/include/: uart_buffer.h
examples/uart/src/: lib.rs
examples/uart/tests/: uart.rs
ffi-mock-macro/src/: lib.rs
src/: lib.rs  mem_mock.rs  shared_state.rs
tests/address-mock-test/: Cargo.toml  dut.c  test.proptest-regressions  test.rs
