workspace = { members = ["examples/mock_basics", "examples/mem_mock", "examples/gpio", "cesty-build", "cesty-macro", "tests/address-mock-test"] }
[package]
name = "cesty"
version = "0.2.0"
edition = "2024"
authors = ["Pil Eghoff <contact@pil.fyi>"]
description = "A testing framework for C code"
readme = "README.md"
repository = "https://github.com/pileghoff/cesty"
license = "MIT"
keywords = ["mock", "testing", "ffi", "embedded"]
categories = ["development-tools::ffi", "development-tools::testing", "embedded"]

[dependencies]
lazy_static = "1.4.0"
cesty-macro = {path="./cesty-macro/", version= "0.2.0" }
yansi = "1.0.1"
