[package]
name = "cesty-macro"
version = "0.1.0"
edition = "2021"
authors = ["Pil Eghoff <contact@pil.fyi>"]
description = "Proc macros for cesty"
repository = "https://github.com/pileghoff/cesty"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features=["full"]}
quote = "1.0"
