[package]
name = "cesty-macro"
version = "0.2.0"
edition = "2024"
authors = ["Pil Eghoff <contact@pil.fyi>"]
description = "Proc macros for cesty"
repository = "https://github.com/pileghoff/cesty"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features=["full"]}
quote = "1.0"
