[package]
name = "cesty-gpio-example"
edition = "2024"
publish = false

[[test]]
name = "gpio"
path = "tests/gpio.rs"

[dependencies]
cesty = { path = "../.." }

[build-dependencies]
cesty-build = { path = "../../cesty-build" }

[cesty.gpio]
sources = ["c/gpio_driver.c"]
includes = ["include"]
ignore = ["arch/types.h"]
flags = "-DGPIO_MODULE"
auto_stub = true
